--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,10 +5,10 @@ Released 2021-04-12
 - Features
 
 	- Upgrade py-evm to v0.4.0-alpha.4 for Python 3.9 support
-		https://github.com/ethereum/eth-tester/pull/205
+		https://github.com/platonnetwork/platon-tester/pull/205
   - Upgrade py-evm to v0.4.0-alpha.3, for Berlin support
     Default to Berlin
-    https://github.com/ethereum/eth-tester/pull/204
+    https://github.com/platonnetwork/platon-tester/pull/204
 
 
 v0.5.0-beta.2
@@ -19,20 +19,20 @@ Released 2020-08-31
 - Features
 
   - Officially support py3.8
-    https://github.com/ethereum/eth-tester/pull/195
+    https://github.com/platonnetwork/platon-tester/pull/195
 
 - Performance
 
   - Upgrade pyrlp to v2-alpha1, with faster encoding/decoding
-    https://github.com/ethereum/eth-tester/pull/195
+    https://github.com/platonnetwork/platon-tester/pull/195
 
 - Misc
 
   - Pypy support completely dropped (it was never officially added,
     only some pieces were tested, in hopes of eventually supporting)
-    https://github.com/ethereum/eth-tester/pull/195
+    https://github.com/platonnetwork/platon-tester/pull/195
   - Upgrade to pyevm v0.3.0-alpha.19
-    https://github.com/ethereum/eth-tester/pull/196
+    https://github.com/platonnetwork/platon-tester/pull/196
 
 
 v0.5.0-beta.1
@@ -43,14 +43,14 @@ Released 2020-06-01
 - Breaking changes
 
   - Make gas limit constant for py-evm backend
-    https://github.com/ethereum/eth-tester/pull/192
+    https://github.com/platonnetwork/platon-tester/pull/192
 
 - Features
 
   - Add support for gas estimate block identifiers
-    https://github.com/ethereum/eth-tester/pull/189
+    https://github.com/platonnetwork/platon-tester/pull/189
   - Add support for custom virtual machine fork schedule in PyEVMBackend
-    https://github.com/ethereum/eth-tester/pull/191
+    https://github.com/platonnetwork/platon-tester/pull/191
 
 
 v0.4.0-beta.2
@@ -58,8 +58,8 @@ v0.4.0-beta.2
 
 - Misc
 
-  - Upgrate eth-keys to allow 0.3.* versions
-  - Upgrate py-evm to v0.3.0-alpha.15, which allows the eth-keys upgrade
+  - Upgrate platon-keys to allow 0.3.* versions
+  - Upgrate py-evm to v0.3.0-alpha.15, which allows the platon-keys upgrade
 
 
 v0.4.0-beta.1
@@ -68,7 +68,7 @@ v0.4.0-beta.1
 - Misc
 
   - Upgrade to py-evm v0.3.0-b11
-    https://github.com/ethereum/eth-tester/pull/172
+    https://github.com/platonnetwork/platon-tester/pull/172
 
 
 v0.3.0-beta.1
@@ -77,14 +77,14 @@ v0.3.0-beta.1
 - Breaking changes
 
   - Default to IstanbulVM
-    https://github.com/ethereum/eth-tester/pull/169
+    https://github.com/platonnetwork/platon-tester/pull/169
 
 - Misc
 
   - Upgrade to py-evm v0.3.0-b7
-    https://github.com/ethereum/eth-tester/pull/166
+    https://github.com/platonnetwork/platon-tester/pull/166
   - Upgrade to py-evm v0.3.0-b8
-    https://github.com/ethereum/eth-tester/pull/171
+    https://github.com/platonnetwork/platon-tester/pull/171
 
 v0.2.0-beta.2
 ------------
@@ -94,7 +94,7 @@ Released June 19, 2019
 - Misc
 
   - Upgrade to py-evm v0.3.0-b1
-    https://github.com/ethereum/eth-tester/pull/164
+    https://github.com/platonnetwork/platon-tester/pull/164
 
 0.2.0-beta.1
 ------------
@@ -104,9 +104,9 @@ Released June 13, 2019
 - Breaking changes
 
   - Drop Python 3.5
-    https://github.com/ethereum/eth-tester/pull/160
+    https://github.com/platonnetwork/platon-tester/pull/160
   - Upgrade to Py-EVM 0.2.0-a43
-    https://github.com/ethereum/eth-tester/pull/162
+    https://github.com/platonnetwork/platon-tester/pull/162
 
 
 0.1.0-beta.39
@@ -117,7 +117,7 @@ Released April 12, 2019
 - Misc
 
   - Update default VM rules to Constantinople
-    https://github.com/ethereum/eth-tester/pull/153
+    https://github.com/platonnetwork/platon-tester/pull/153
 
 0.1.0-beta.38
 -------------
@@ -127,7 +127,7 @@ Released April 10, 2019
 - Misc
 
   - Update PyEVM and Pytest Dependencies
-    https://github.com/ethereum/eth-tester/pull/152
+    https://github.com/platonnetwork/platon-tester/pull/152
 
 0.1.0-beta.37
 -------------
@@ -137,7 +137,7 @@ Released Jan 22, 2019
 - Misc
 
   - Make PyEVMBackend subclass of BaseChainBackend
-    https://github.com/ethereum/eth-tester/pull/150
+    https://github.com/platonnetwork/platon-tester/pull/150
 
 0.1.0-beta.36
 -------------
@@ -146,8 +146,8 @@ Released Jan 10, 2019
 
 - Misc
 
-  - Upgrade eth-keys and rlp
-    https://github.com/ethereum/eth-tester/pull/146
+  - Upgrade platon-keys and rlp
+    https://github.com/platonnetwork/platon-tester/pull/146
 
 0.1.0-beta.35
 -------------
@@ -157,11 +157,11 @@ Released Jan 9, 2019
 - Misc
 
   - Upgrade py-evm to 0.2.0a38
-    https://github.com/ethereum/eth-tester/pull/143
+    https://github.com/platonnetwork/platon-tester/pull/143
   - Readme fixups
-    https://github.com/ethereum/eth-tester/pull/144
-  - Remove dead `formatting` module, replace with `eth-utils` utilities
-    https://github.com/ethereum/eth-tester/pull/145
+    https://github.com/platonnetwork/platon-tester/pull/144
+  - Remove dead `formatting` module, replace with `platon-utils` utilities
+    https://github.com/platonnetwork/platon-tester/pull/145
 
 0.1.0-beta.34
 -------------
@@ -170,21 +170,21 @@ Released Dec 20, 2018
 
 - Breaking changes
 
-  - Update eth-abi from v1 to v2
-    https://github.com/ethereum/eth-tester/pull/141
+  - Update platon-abi from v1 to v2
+    https://github.com/platonnetwork/platon-tester/pull/141
 
 - Misc
 
   - Improve error message when trying to sign with an unknown address
-    https://github.com/ethereum/eth-tester/pull/140
+    https://github.com/platonnetwork/platon-tester/pull/140
   - Add custom genesis examples to docs
-    https://github.com/ethereum/eth-tester/pull/136
-  - Steps toward pypy support, by using eth_utils.toolz
-    https://github.com/ethereum/eth-tester/pull/138
+    https://github.com/platonnetwork/platon-tester/pull/136
+  - Steps toward pypy support, by using platon_utils.toolz
+    https://github.com/platonnetwork/platon-tester/pull/138
   - Remove duplicate generate_contract_address, drop custom secp256k1 and jacobian utilities
-    https://github.com/ethereum/eth-tester/pull/137
-  - Upgrade eth-utils (and eth-abi)
-    https://github.com/ethereum/eth-tester/pull/141
+    https://github.com/platonnetwork/platon-tester/pull/137
+  - Upgrade platon-utils (and platon-abi)
+    https://github.com/platonnetwork/platon-tester/pull/141
 
 0.1.0-beta.33
 -------------
@@ -192,9 +192,9 @@ Released Dec 20, 2018
 Released Oct 4, 2018
 
 - Add some low-level internal tools for setting genesis parameters (API subject to change)
-  https://github.com/ethereum/eth-tester/pull/123
-- Upgrade py-evm to alpha 33 https://github.com/ethereum/eth-tester/pull/134
-- Misc testing & dependency fixes https://github.com/ethereum/eth-tester/pull/127
+  https://github.com/platonnetwork/platon-tester/pull/123
+- Upgrade py-evm to alpha 33 https://github.com/platonnetwork/platon-tester/pull/134
+- Misc testing & dependency fixes https://github.com/platonnetwork/platon-tester/pull/127
 
 0.1.0
 -----
